--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body class="min-h-screen" data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
